add syscall fork()

--- a/src/kernel/drivers/file-manager/Makefile
+++ b/src/kernel/drivers/file-manager/Makefile
@@ -9,8 +9,10 @@ OBJS    = $(CFILES:.c=.o)
 test.img: $(OBJS)
 	$(LD) $(LDFLAGS) -e main -Ttext 0x08048000 -o test.img $(OBJS)
 	readelf -a test.img > elf.txt
+	sh dump-file.sh test.img
 
 -include $(OBJS:.o=.d)
 
 clean:
 	rm -f test.img $(OBJS) $(OBJS:.o=.d)
+	rm a.txt
